<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.gaagjescraft.network.team</groupId>
    <artifactId>Manhunt</artifactId>
    <version>1.3.1</version>
    <packaging>jar</packaging>

    <name>Manhunt</name>

    <description>Manhunt by GCNT</description>
    <properties>
        <java.version>16</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.2.7</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.1-SNAPSHOT</version>
                <configuration>
                    <dependencyReducedPomLocation>${project.basedir}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                    <relocations>
                        <relocation>
                            <pattern>io.papermc.lib</pattern>
                            <shadedPattern>${project.groupId}.manhunt.paperlib</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                </includes>
            </resource>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>plugin.yml</exclude>
                </excludes>
            </resource>
        </resources>
    </build>


    <repositories>
        <repository>
            <id>gcnt-self</id>
            <url>https://nexuslite.gcnt.net/repos/gcnt/</url>
        </repository>
        <repository>
            <id>gcnt-bukkit</id>
            <url>https://nexuslite.gcnt.net/repos/bukkit/</url>
        </repository>
        <repository>
            <id>gcnt</id>
            <url>https://nexuslite.gcnt.net/repos/other/</url>
        </repository>
        <repository>
            <id>nametagedit</id>
            <url>https://ci.nametagedit.com/plugin/repository/everything/</url>
        </repository>
        <repository>
            <id>enginehub-maven</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>viaversion-repo</id>
            <url>https://repo.viaversion.com</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>OnARandomBox</id>
            <url>https://repo.onarandombox.com/content/groups/public/</url>
        </repository>
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>simonsators-repo</id>
            <url>https://simonsator.de/repo/</url>
        </repository>
        <repository>
            <id>alessiodp-repo</id>
            <url>https://repo.alessiodp.com/releases/</url>
        </repository>
        <repository>
            <id>rapture-snapshots</id>
            <url>https://repo.rapture.pw/repository/maven-snapshots/</url>
        </repository>
    </repositories>


    <dependencies>
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>bukkit</artifactId>
            <version>1.16.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>de.simonsator</groupId>
            <artifactId>Party-and-Friends-MySQL-Edition-Spigot-API</artifactId>
            <version>1.5.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>de.simonsator</groupId>
            <artifactId>Spigot-Party-API-For-RedisBungee</artifactId>
            <version>1.0.3-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.alessiodp.parties</groupId>
            <artifactId>parties-api</artifactId>
            <version>3.2.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>de.simonsator</groupId>
            <artifactId>DevelopmentPAFSpigot</artifactId>
            <version>1.0.67</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.grinderwolf</groupId>
            <artifactId>slimeworldmanager-api</artifactId>
            <version>2.7.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.onarandombox.multiversecore</groupId>
            <artifactId>Multiverse-Core</artifactId>
            <version>4.3.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.popcraft</groupId>
            <artifactId>chunky-bukkit</artifactId>
            <version>1.2.173</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.popcraft</groupId>
            <artifactId>chunky-common</artifactId>
            <version>1.2.173</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.2.10</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.spigotmc</groupId>
                    <artifactId>spigot-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver</artifactId>
            <version>3.12.10</version>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.nametagedit</groupId>
            <artifactId>nametagedit</artifactId>
            <version>4.5.6</version>
        </dependency>
        <dependency>
            <groupId>com.viaversion</groupId>
            <artifactId>viaversion-api</artifactId>
            <version>4.2.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>
        <dependency>
            <groupId>net.gcnt</groupId>
            <artifactId>additionsplus</artifactId>
            <version>1.0.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.papermc</groupId>
            <artifactId>paperlib</artifactId>
            <version>1.0.8-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
